--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -3,59 +3,85 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Home</title>
+        <title>TempoCerto</title>
+        <link rel="stylesheet" href="../css/style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <div class="container d-flex justify-content-around align-items-center">
-            <div id="title-header">
-                <h1>
-                    Meteriologia
-                </h1>
-            </div>
-            <img src="../dados/imagens/user.png" alt="" width="32px">
-        </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-header">
-                                Temperatura 40º
-                            </div>
-                            <div class="card-body">
-                                <img src="/imagens/temperature-high.png" alt="">
-                            </div>
-                            <div class="card-footer">
-                                Atualizacao: lfdkasjflçsa
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-header">
-                                Luz
-                            </div>
-                            <div class="card-body">
-                                <img src="/imagens/light-on.png" alt="">
-                            </div>
-                            <div class="card-footer">
-                                Atualizacao: lfdkasjflçsa
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="card">
-                            <div class="card-header">
-                                Humidade
-                            </div>
-                            <div class="card-body">
-                                <img src="/imagens/humidity-high.png" alt="">
-                            </div>
-                            <div class="card-footer">
-                                Atualizacao: lfdkasjflçsa
-                            </div>
-                        </div>
+        <div class="wrapper">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#" style="padding-left: 25px; margin-right: 5px;">TempoCerto</a>
+                <img class="hotbarImg" src="../dados/imagens/group.png">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto" style="padding-left: 25px;">
+                      <li class="nav-item active">
+                        <a class="nav-link" href="#">Tempo<span class="sr-only"></span></a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">historico</a>
+                      </li>
+                    </ul>
+                </div>
+                <img src="../dados/imagens/user.png" class="logoutImg">
+            </nav>
+            <div class="container" style="margin-left: auto;">
+                <div class="row" style="margin-top: 50px;">
+                    <div class="col">
+                        <table class="table">
+                            <caption>Lista de tempo</caption>
+                            <thead>
+                                <tr>
+                                    <th scope="col" colspan="4">
+                                        Tempo Leiria Hoje
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        Hora
+                                    </td>
+                                    <td>
+                                        Temperatura
+                                    </td>
+                                    <td>
+                                        Descrição do ceu
+                                    </td>
+                                    <td>
+                                        Descrição do vento
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Hora
+                                    </td>
+                                    <td>
+                                        Temperatura
+                                    </td>
+                                    <td>
+                                        Descrição do ceu
+                                    </td>
+                                    <td>
+                                        Descrição do vento
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Hora
+                                    </td>
+                                    <td>
+                                        Temperatura
+                                    </td>
+                                    <td>
+                                        Descrição do ceu
+                                    </td>
+                                    <td>
+                                        Descrição do vento
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        
                     </div>
                 </div>
             </div>
